# coffee-and-wifi

./: README.md  main.py  pyproject.toml  settings.toml
coffee_and_wifi/: __init__.py  forms.py  models.py  storage.py
coffee_and_wifi/blueprints/api/: __init__.py  exceptions.py  resources.py  routes.py
coffee_and_wifi/blueprints/user_interface/: __init__.py  routes.py
coffee_and_wifi/extensions/: configuration.py  database.py  forms.py
coffee_and_wifi/extensions/database/: __init__.py  models.py
coffee_and_wifi/static/: site.webmanifest
coffee_and_wifi/static/css/: add-cafe.css  cafes.css  custom.css  global.css  index.css
coffee_and_wifi/static/js/: script.js
coffee_and_wifi/templates/: add.html  base.html  cafes.html  header.html  index.html
coffee_and_wifi/templates/components/: notifications.html
data/: cafes.csv  cafes.json
static/css/: styles.css
templates/: add.html  base.html  cafes.html  index.html
tests/: conftest.py  test_api.py  test_ui.py
