[tool.poetry]
name = "coffee-and-wifi"
version = "0.1.0"
description = "Website for sharing data about coffee shops."
authors = ["Igor Ferreira <iferreira.n01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.2"
flask-wtf = "^1.1.1"
bootstrap-flask = "^2.2.0"
python-dotenv = "^0.21.1"
peewee = "^3.16.0"
flask-restx = "^1.1.0"
dynaconf = "^3.1.12"


[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
isort = "^5.12.0"
mypy = "^1.1.1"
pytest = "^7.3.0"
coverage = "^7.2.3"
types-peewee = "^3.16.0.0"
taskipy = "^1.10.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = [
  "pydantic.mypy"
]
packages = [
  "coffee_and_wifi"
]
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[[tool.mypy.overrides]]
module = [
    "flask_bootstrap",
    "flask_wtf",
    "wtforms.*",
    "playhouse.*",
    "flask_restx",
    "dynaconf"
]
ignore_missing_imports = true

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
lint = "isort --check --diff . && blue --check --diff ."
format = "isort . && blue ."
pre_test = "task lint"
test = "coverage run --source=coffee_and_wifi -m pytest -s -x -v"
post_test = "coverage html"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
]
